--- a/src/app/Features/news/news-card/news-card.css
+++ b/src/app/Features/news/news-card/news-card.css
@@ -12,8 +12,7 @@
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 img{
-    width: fit-content;
-    height: 200px;
+    height: 15rem;
     margin: 0px auto;
     object-fit: cover;
 }
