--- a/src/app/Features/products/product-details/product-details.html
+++ b/src/app/Features/products/product-details/product-details.html
@@ -14,50 +14,49 @@
             <div class="hero-content">
                 <h1>{{getProductName()}}</h1>
                 <h2>{{getProductTitle()}}</h2>
-                <h2>{{getProductSubtitle()}}</h2>
+                <h4 class="mt-5">{{getProductDescription()}}</h4>
             </div>
         </div>
-        <div class="img-div col-lg-5 col-md-12 col-sm-12 d-flex justify-content-center align-items-center">
+        <div class="img-div col-lg-5 col-md-12 col-sm-12 d-flex flex-column align-items-center">
             <img [src]="getProductImage()" alt="Mobil CVL Oils" class="hero-image">
+            <h4 class="mt-4 text-center">{{getProductSubtitle()}}</h4>
         </div>
+
     </section>
 
-    <!-- <div class="container my-5">
-         <p>{{getProductDescription()}}</p>
-    </div> -->
    
     <div class="key-benefits">
         <div class="container">
-            <h2>Key Benefits</h2>
-            <p class="subtitle">Discover why industry leaders choose our premium lubrication solutions</p>
+            <h2>{{getKeyBenefitsTitle()}}</h2>
+            <p class="subtitle">{{getKeyBenefitsStatement()}}</p>
             <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-lg-4 col-md-12 col-sm-12 benefit-item">
                     <div class="svg-div">
                         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M6.03954 7.77203C3.57986 8.32856 2.35002 8.60682 2.05742 9.54773C1.76482 10.4886 2.60325 11.4691 4.2801 13.4299L4.71392 13.9372C5.19043 14.4944 5.42868 14.773 5.53586 15.1177C5.64305 15.4624 5.60703 15.8341 5.53498 16.5776L5.4694 17.2544C5.21588 19.8706 5.08912 21.1787 5.85515 21.7602C6.62118 22.3417 7.77268 21.8115 10.0757 20.7512L10.6715 20.4768C11.3259 20.1755 11.6531 20.0248 12 20.0248C12.3469 20.0248 12.6741 20.1755 13.3285 20.4768L13.9243 20.7512C16.2273 21.8115 17.3788 22.3417 18.1449 21.7602C18.9109 21.1787 18.7841 19.8706 18.5306 17.2544M19.7199 13.4299C21.3968 11.4691 22.2352 10.4886 21.9426 9.54773C21.65 8.60682 20.4201 8.32856 17.9605 7.77203L17.3241 7.62805C16.6251 7.4699 16.2757 7.39083 15.9951 7.17781C15.7144 6.96479 15.5345 6.64193 15.1745 5.99623L14.8468 5.40837C13.5802 3.13612 12.9469 2 12 2C11.0531 2 10.4198 3.13613 9.15316 5.40838" stroke="#fcfcfc" stroke-width="1.5" stroke-linecap="round"></path> </g></svg>
                     </div>
-                    <h4>Superior Engine Protection</h4>
-                    <p>Reduces wear, deposits, and corrosion to extend engine life.</p>
+                    <h4>{{getProductBenefitTitle_1()}}</h4>
+                    <p>{{getProductBenefitDescription_1()}}</p>
                 </div>
                 <div class="col-lg-4 col-md-12 col-sm-12 benefit-item">
                     <div class="svg-div">
                         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M6.03954 7.77203C3.57986 8.32856 2.35002 8.60682 2.05742 9.54773C1.76482 10.4886 2.60325 11.4691 4.2801 13.4299L4.71392 13.9372C5.19043 14.4944 5.42868 14.773 5.53586 15.1177C5.64305 15.4624 5.60703 15.8341 5.53498 16.5776L5.4694 17.2544C5.21588 19.8706 5.08912 21.1787 5.85515 21.7602C6.62118 22.3417 7.77268 21.8115 10.0757 20.7512L10.6715 20.4768C11.3259 20.1755 11.6531 20.0248 12 20.0248C12.3469 20.0248 12.6741 20.1755 13.3285 20.4768L13.9243 20.7512C16.2273 21.8115 17.3788 22.3417 18.1449 21.7602C18.9109 21.1787 18.7841 19.8706 18.5306 17.2544M19.7199 13.4299C21.3968 11.4691 22.2352 10.4886 21.9426 9.54773C21.65 8.60682 20.4201 8.32856 17.9605 7.77203L17.3241 7.62805C16.6251 7.4699 16.2757 7.39083 15.9951 7.17781C15.7144 6.96479 15.5345 6.64193 15.1745 5.99623L14.8468 5.40837C13.5802 3.13612 12.9469 2 12 2C11.0531 2 10.4198 3.13613 9.15316 5.40838" stroke="#fcfcfc" stroke-width="1.5" stroke-linecap="round"></path> </g></svg>
                     </div>
-                    <h4>Extended Oil Drain Intervals</h4>
-                    <p>Formulated to last longer, reducing downtime and service costs.</p>
+                    <h4>{{getProductBenefitTitle_2()}}</h4>
+                    <p>{{getProductBenefitDescription_2()}}</p>
                 </div>
                 <div class="col-lg-4 col-md-12 col-sm-12 benefit-item">
                     <div class="svg-div">
                         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M6.03954 7.77203C3.57986 8.32856 2.35002 8.60682 2.05742 9.54773C1.76482 10.4886 2.60325 11.4691 4.2801 13.4299L4.71392 13.9372C5.19043 14.4944 5.42868 14.773 5.53586 15.1177C5.64305 15.4624 5.60703 15.8341 5.53498 16.5776L5.4694 17.2544C5.21588 19.8706 5.08912 21.1787 5.85515 21.7602C6.62118 22.3417 7.77268 21.8115 10.0757 20.7512L10.6715 20.4768C11.3259 20.1755 11.6531 20.0248 12 20.0248C12.3469 20.0248 12.6741 20.1755 13.3285 20.4768L13.9243 20.7512C16.2273 21.8115 17.3788 22.3417 18.1449 21.7602C18.9109 21.1787 18.7841 19.8706 18.5306 17.2544M19.7199 13.4299C21.3968 11.4691 22.2352 10.4886 21.9426 9.54773C21.65 8.60682 20.4201 8.32856 17.9605 7.77203L17.3241 7.62805C16.6251 7.4699 16.2757 7.39083 15.9951 7.17781C15.7144 6.96479 15.5345 6.64193 15.1745 5.99623L14.8468 5.40837C13.5802 3.13612 12.9469 2 12 2C11.0531 2 10.4198 3.13613 9.15316 5.40838" stroke="#fcfcfc" stroke-width="1.5" stroke-linecap="round"></path> </g></svg>
                     </div>
-                    <h4>Fuel Economy</h4>
-                    <p>Improves fuel efficiency, lowering operational expenses.</p>
+                    <h4>{{getProductBenefitTitle_3()}}</h4>
+                    <p>{{getProductBenefitDescription_3()}}</p>
                 </div>
                 <div class="col-lg-4 col-md-12 col-sm-12 benefit-item">
                     <div class="svg-div">
                         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M6.03954 7.77203C3.57986 8.32856 2.35002 8.60682 2.05742 9.54773C1.76482 10.4886 2.60325 11.4691 4.2801 13.4299L4.71392 13.9372C5.19043 14.4944 5.42868 14.773 5.53586 15.1177C5.64305 15.4624 5.60703 15.8341 5.53498 16.5776L5.4694 17.2544C5.21588 19.8706 5.08912 21.1787 5.85515 21.7602C6.62118 22.3417 7.77268 21.8115 10.0757 20.7512L10.6715 20.4768C11.3259 20.1755 11.6531 20.0248 12 20.0248C12.3469 20.0248 12.6741 20.1755 13.3285 20.4768L13.9243 20.7512C16.2273 21.8115 17.3788 22.3417 18.1449 21.7602C18.9109 21.1787 18.7841 19.8706 18.5306 17.2544M19.7199 13.4299C21.3968 11.4691 22.2352 10.4886 21.9426 9.54773C21.65 8.60682 20.4201 8.32856 17.9605 7.77203L17.3241 7.62805C16.6251 7.4699 16.2757 7.39083 15.9951 7.17781C15.7144 6.96479 15.5345 6.64193 15.1745 5.99623L14.8468 5.40837C13.5802 3.13612 12.9469 2 12 2C11.0531 2 10.4198 3.13613 9.15316 5.40838" stroke="#fcfcfc" stroke-width="1.5" stroke-linecap="round"></path> </g></svg>
                     </div>
-                    <h4>Outstanding Thermal and Oxidation Stability</h4>
-                    <p>Maintains performance even in severe conditions.</p>
+                    <h4>{{getProductBenefitTitle_4()}}</h4>
+                    <p>{{getProductBenefitDescription_4()}}</p>
                 </div>
             </div>
         </div>
@@ -65,32 +64,15 @@
 
     <div class="applications">
         <div class="container">
-            <h2>Applications</h2>
-            <p class="subtitle">Trusted across diverse industries for mission-critical operations</p>
-            <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-8 application-item d-flex">
+            <h2>{{getApplicationsTitle()}}</h2>
+            <p class="subtitle">{{getApplicationsStatement()}}</p>
+            <div 
+                class="row d-flex justify-content-center align-items-center">
+                <div class="col-8 application-item d-flex" *ngFor="let application of getProductApplicationList()">
                     <div class="app-svg-div">
                         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve" fill="#ffffff" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <polyline fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" points="28,8 16,20 11,15 "></polyline> <path d="M26.7,13.5c0.2,0.8,0.3,1.6,0.3,2.5c0,6.1-4.9,11-11,11S5,22.1,5,16S9.9,5,16,5c3,0,5.7,1.2,7.6,3.1l1.4-1.4 C22.7,4.4,19.5,3,16,3C8.8,3,3,8.8,3,16s5.8,13,13,13s13-5.8,13-13c0-1.4-0.2-2.8-0.7-4.1L26.7,13.5z"></path> </g></svg>
                     </div> 
-                    <h5 class="mt-1">Long-haul Trucks and Buses</h5>
-                </div>
-                <div class="col-8 application-item d-flex">
-                    <div class="app-svg-div">
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve" fill="#ffffff" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <polyline fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" points="28,8 16,20 11,15 "></polyline> <path d="M26.7,13.5c0.2,0.8,0.3,1.6,0.3,2.5c0,6.1-4.9,11-11,11S5,22.1,5,16S9.9,5,16,5c3,0,5.7,1.2,7.6,3.1l1.4-1.4 C22.7,4.4,19.5,3,16,3C8.8,3,3,8.8,3,16s5.8,13,13,13s13-5.8,13-13c0-1.4-0.2-2.8-0.7-4.1L26.7,13.5z"></path> </g></svg>
-                    </div> 
-                    <h5 class="mt-1">Fleet Operations and Logistics Companies</h5>
-                </div>
-                <div class="col-8 application-item d-flex">
-                    <div class="app-svg-div">
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve" fill="#ffffff" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <polyline fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" points="28,8 16,20 11,15 "></polyline> <path d="M26.7,13.5c0.2,0.8,0.3,1.6,0.3,2.5c0,6.1-4.9,11-11,11S5,22.1,5,16S9.9,5,16,5c3,0,5.7,1.2,7.6,3.1l1.4-1.4 C22.7,4.4,19.5,3,16,3C8.8,3,3,8.8,3,16s5.8,13,13,13s13-5.8,13-13c0-1.4-0.2-2.8-0.7-4.1L26.7,13.5z"></path> </g></svg>
-                    </div> 
-                    <h5 class="mt-1">Heavy-duty Construction and Mining Equipment</h5>
-                </div>
-                <div class="col-8 application-item d-flex">
-                    <div class="app-svg-div">
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve" fill="#ffffff" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <polyline fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" points="28,8 16,20 11,15 "></polyline> <path d="M26.7,13.5c0.2,0.8,0.3,1.6,0.3,2.5c0,6.1-4.9,11-11,11S5,22.1,5,16S9.9,5,16,5c3,0,5.7,1.2,7.6,3.1l1.4-1.4 C22.7,4.4,19.5,3,16,3C8.8,3,3,8.8,3,16s5.8,13,13,13s13-5.8,13-13c0-1.4-0.2-2.8-0.7-4.1L26.7,13.5z"></path> </g></svg>
-                    </div> 
-                    <h5 class="mt-1">Marine and Offshore Supply Vehicles</h5>
+                    <h5 class="mt-1">{{application}}</h5>
                 </div>
             </div>
         </div>
@@ -98,20 +80,11 @@
 
     <div class="why-choose">
         <div class="container">
-            <h2>Why Choose Mobil Marine Lubricants?</h2>
-            <p class="subtitle"> Mobil Marine Lubricants are designed to provide:</p>
+            <h2>{{getWhyChooseTitle()}} {{getProductName()}}</h2>
+            <p class="subtitle"> {{getWhyChooseStatement()}}</p>
             <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-lg-6 col-md-12 col-sm-12 why-choose-item">
-                    <h5>Reduced Maintenance Costs</h5>
-                </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 why-choose-item">
-                    <h5>Longer Equipment Life</h5>
-                </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 why-choose-item">
-                    <h5>Reliable Performance in Extreme Conditions</h5>
-                </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 why-choose-item">
-                    <h5>Tailored After-sales Service and Technical Support</h5>
+                <div class="col-lg-6 col-md-12 col-sm-12 why-choose-item" *ngFor="let reason of getWhyChooseList()">
+                    <h5>{{reason}}</h5>
                 </div>
             </div>
         </div>
