--- a/src/app/Features/home/Components/ceo/ceo.css
+++ b/src/app/Features/home/Components/ceo/ceo.css
@@ -15,18 +15,20 @@ h1{
     background-color: #f8f9fa;
     padding: 2rem;
     border-radius: 10px;
+    margin-top: 2rem;
 }
 .ceo-card {
     background-color: #e9ecef;
     border: none;
     border-radius: 10px;
     padding: 2rem;
-    margin: 2.5rem;;
+    margin: 0 2rem;
 }
 .ceo-card:hover{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transform: translateY(-5px) scale(1.02);
     transition: all 0.3s ease;
+    cursor: pointer;
 }
 .icon-div{
     display: flex;
@@ -34,16 +36,18 @@ h1{
     margin-bottom: 1rem;
 }
 
-.ceo-icon{
+.ceo-image{
     font-size: 5rem;
     color: white;
     background-color: #e3e4ea;
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    img{
+        width: 200px;
+        object-fit: cover;
+    }
 }
 
 .ceo-card h4 {
