--- a/src/app/Features/home/Components/ceo/ceo.html
+++ b/src/app/Features/home/Components/ceo/ceo.html
@@ -1,11 +1,7 @@
 <!-- ceo.html - Updated Template -->
 <div class="container">
   <!-- Loading State -->
-  <div *ngIf="isLoading()" class="text-center">
-    <div class="spinner-border" role="status">
-      <span class="sr-only">Loading...</span>
-    </div>
-  </div>
+  <app-loading *ngIf="isLoading()"></app-loading>
 
   <!-- Content when data is available -->
   <div *ngIf="hasData()">
@@ -16,12 +12,13 @@
       <div class="col-md-6 mb-2">
         <div class="ceo-card shadow">
           <div class="icon-div">
-            <div class="ceo-icon">
-              <i class="bi bi-person"></i>
+            <div class="ceo-image">
+              <img src="{{ getCeoImageUrl() }}" alt="">
             </div>
           </div>
           <h4 class="text-center">{{ getCeoName() }}</h4>
           <p class="text-center">{{ getCeoTitle() }}</p>
+          
           <ul>
             <li> 
               <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -71,7 +68,8 @@
               </svg>
               Specialized team of over 100 experts
             </li>
-          </ul>
+          </ul> 
+        
         </div>
       </div>
       
