--- a/src/app/Features/home/Components/values/values.css
+++ b/src/app/Features/home/Components/values/values.css
@@ -27,6 +27,7 @@ p.subtitle {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease;
     margin: 0rem 0.5rem;
