--- a/src/app/Features/home/Components/hero-section/hero-section.html
+++ b/src/app/Features/home/Components/hero-section/hero-section.html
@@ -6,7 +6,7 @@
     <p class="subtitle"> {{getHeroSubtitle()}} </p>
     <span >{{getHeroMission()}}</span>
     <div class="hero-buttons">
-      <a class="btn" href="home#products"> <i class="bi bi-grid-fill me-2"></i>{{getHeroProductFilterLabel()}}</a>
+      <a class="btn" href="home#products"> <i class="bi bi-grid-fill me-2"></i>{{getHeroProductLabel()}}</a>
       <a class="btn" href="home#contact"> <i class="bi bi-chat-dots me-2"></i>{{getHeroKeepInTouch()}}</a>
     </div>
   </div>
