--- a/src/app/Features/home/Components/about/about.css
+++ b/src/app/Features/home/Components/about/about.css
@@ -32,6 +32,7 @@ p.subtitle {
     box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease;
     height: 80%;
+    cursor: pointer;
 }
 .about-card-status h4 {
     color: #1a3c5e;
@@ -53,6 +54,7 @@ p.subtitle {
     margin-bottom: 1rem;
     box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease;
+    cursor: pointer;
 }
 .about-card h3 {
     color: #1a3c5e;
