--- a/src/app/Features/home/Components/contact/contact.css
+++ b/src/app/Features/home/Components/contact/contact.css
@@ -115,6 +115,7 @@
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s;
   display: flex;
+  cursor: pointer;
 }
 
 .info-card:hover {
@@ -187,4 +188,42 @@ svg {
     flex: 1 1 100%;
     margin-top: 10px;
   }
+}
+
+
+.loc-card{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: white;
+  padding: 2rem;
+  border-radius: 20px;
+  cursor: pointer;
+
+  a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-emphasis: none;
+    color: inherit;
+    text-decoration: none;  
+    margin-top: 10px;
+    transition: transform 0.3s ease;
+
+    h3{
+      font-weight: 600;
+    }
+    svg{
+      width: 3rem;
+      height: 3rem;
+      margin-top: 20px;
+    }
+  }
+}
+
+.loc-card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
 }
