--- a/src/app/Features/home/Components/values/values.html
+++ b/src/app/Features/home/Components/values/values.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>{{getValuesTitle()}}</h1>
-    <!-- <p class="subtitle text-muted">{{getValuesSubtitle()}}</p> -->
+    <p class="subtitle text-muted">{{getValuesSubtitle()}}</p>
      
     <div class="value-container row mt-4 d-flex justify-content-center">
         <div class="col-lg-4 col-md-6 col-sm-12">
