--- a/src/app/Features/home/Components/contact/contact.html
+++ b/src/app/Features/home/Components/contact/contact.html
@@ -56,7 +56,7 @@
         </div>
         <div>
           <h3>{{getContactFormFieldsEmail()}}</h3>
-          <p>info@azzabelkhaleej.com</p>
+          <p>{{getContactInfoEmail()}}</p>
         </div>
       </div>
 
