--- a/src/app/Features/home/Components/hero-section/hero-section.css
+++ b/src/app/Features/home/Components/hero-section/hero-section.css
@@ -40,6 +40,9 @@
 .hero-content h1 {
     font-size: 5rem;
     font-weight: bolder;
+    white-space: nowrap;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    color: #fff;
 }
 
 .hero-content h1 span {
