--- a/src/app/Features/news/news-details/news-details.css
+++ b/src/app/Features/news/news-details/news-details.css
@@ -47,10 +47,8 @@
 }
 
 .news-main-image {
-  width: 100%;
-  height: auto;
-  max-height: 500px;
-  object-fit: cover;
+  
+  max-width: 100%; 
   border-radius: 10px;
   box-shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
   transition: transform 0.3s ease;
