--- a/src/app/Shared/loading/loading.html
+++ b/src/app/Shared/loading/loading.html
@@ -1,6 +1,9 @@
 <div class="loading-overlay">
   <div class="loading-content">
-    <i class="bi bi-gear-fill gear-spinner"></i>
-    <div class="loading-text">Loading, please wait...</div>
+    <div class="gears-wrapper">
+      <i class="bi bi-gear-fill gear-spinner gear1"></i>
+      <i class="bi bi-gear-fill gear-spinner gear2"></i>
+    </div>
+  <div class="loading-text">{{ loadingText }}</div>
   </div>
 </div>
