--- a/src/app/Features/home/Components/about/about.html
+++ b/src/app/Features/home/Components/about/about.html
@@ -35,7 +35,7 @@
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12 mb-2 my-2 d-flex flex-column align-items-center justify-content-center">
             <div class="about-image-wrapper mb-3">
-                <img src="assets/Images/C.jpg" alt="Company Image" class="about-company-image"/>
+                <img [src]="getAboutImageUrl()" alt="Company Image" class="about-company-image"/>
             </div>
             <div class="row w-100">
                 <div class="col-6">
