--- a/src/app/Features/home/Components/about/about.css
+++ b/src/app/Features/home/Components/about/about.css
@@ -8,6 +8,8 @@ body {
     background-color: #f9f9f9;
     margin: 3rem 0;
     padding: 3rem 10rem;
+    width: 100%;
+    max-width: 100vw;
 }
 h1 {
     color: #1a3c5e;
