--- a/src/app/Features/home/Components/clients/clients.css
+++ b/src/app/Features/home/Components/clients/clients.css
@@ -1,3 +1,10 @@
+body{
+    width: 100%;
+    max-width: 100vw;
+}
+
+
+
 .container {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
     font-size: clamp(14px, 1.5vw, 18px);
