--- a/src/app/Features/home/Components/products/products.css
+++ b/src/app/Features/home/Components/products/products.css
@@ -5,6 +5,8 @@ body{
     font-size: clamp(14px, 1.5vw, 18px);
     line-height: 1.6;
     margin-top: 3rem;
+    width: 100%;
+    max-width: 100vw;
 }
 h1 {
     color: #1a3c5e;
