--- a/src/app/Features/products/product-details/product-details.css
+++ b/src/app/Features/products/product-details/product-details.css
@@ -4,7 +4,9 @@ body {
     line-height: 1.6;
     margin-top: 7rem;
     padding: 0;
-    overflow-x: hidden; 
+    overflow-x: hidden;
+    width: 100%;
+  max-width: 100vw; 
 }
 
 /* Hero Section */
