--- a/src/app/Shared/header/header.html
+++ b/src/app/Shared/header/header.html
@@ -18,10 +18,10 @@
                 </div>
 
                 <div class="d-flex align-items-center" [style.flex-direction]="isRTL ? 'row-reverse' : 'row'">
-                    <span [ngClass]="isRTL ? 'ms-4' : 'me-4'">
+                    <!-- <span [ngClass]="isRTL ? 'ms-4' : 'me-4'">
                         {{ getTagline() }}
                     </span>
-                    
+                     -->
                     <div class="btn-group">
                         <button type="button" class="lang-btn">
                             <i class="bi bi-globe2 me-1"></i> 
