--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,22 @@
 }
 
 
+html, body {
+  width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.app-root, .container, .row, [class*="col-"], .header-container, .footer-container {
+  width: 100%;
+  max-width: 100vw;
+}
+
+
 
 
 /*===============================================
