--- a/src/app/Features/news/news-card/news-card.html
+++ b/src/app/Features/news/news-card/news-card.html
@@ -2,7 +2,7 @@
   <img [src]="getNewsImage()" class="card-img-top" [alt]="news.title">
   <div class="card-body" [class.text-end]="isRTL()">
     <p>
-        <i class="bi bi-calendar2" [class.mx-2]="!isRTL()" [class.ms-2]="isRTL()"></i> 
+        <i class="bi bi-calendar2" [class.mx-2]="!isRTL()" [class.me-2]="isRTL()"></i> 
         <span class="news-date">{{ getFormattedDate() }}</span>
     </p>
     <h5 class="card-title">{{ news.title }}</h5>
