--- a/src/app/Shared/header/header.css
+++ b/src/app/Shared/header/header.css
@@ -16,6 +16,7 @@ header {
     background-color: white;
     width: 100%;
     max-width: 100vw;
+    overflow-x: hidden;
 }
 
 /* Offset for fixed header - responsive */
