Update Ceo & Serving Sectors & Contact  & footer & loading

--- a/src/app/Features/home/Components/news/news.html
+++ b/src/app/Features/home/Components/news/news.html
@@ -12,8 +12,7 @@
                                 class="col-md-5"
                                 *ngFor="let news of newsGroup" 
                                 [news]="news" 
-                                [lang]="getCurrentLanguage()" 
-                                (click)="onNewsClick(news)">
+                                [lang]="getCurrentLanguage()">
                             </app-news-card>
                         </div>
                     </div>
