--- a/src/app/Features/home/Components/serving-sectors/serving-sectors.html
+++ b/src/app/Features/home/Components/serving-sectors/serving-sectors.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         
-        <div class="join-contact text-center mt-5">
+        <div class="join-contact text-center ">
             <h2>{{getClientFamilyTitle()}}</h2>
             <p>{{getClientFamilyDescription()}}</p>
             <a href="home#contact" class="btn">{{getClientFamilyButton()}}</a>
