--- a/src/app/Features/products/product-details/product-details.html
+++ b/src/app/Features/products/product-details/product-details.html
@@ -14,7 +14,7 @@
             <div class="hero-content">
                 <h1>{{getProductName()}}</h1>
                 <h2>{{getProductTitle()}}</h2>
-                <h4 class="mt-5">{{getProductDescription()}}</h4>
+                <h4 class="desc">{{getProductDescription()}}</h4>
             </div>
         </div>
         <div class="img-div col-lg-5 col-md-12 col-sm-12 d-flex flex-column align-items-center">
