--- a/src/app/Features/news/news-card/news-card.html
+++ b/src/app/Features/news/news-card/news-card.html
@@ -3,7 +3,7 @@
   <div class="card-body" [class.text-end]="isRTL()">
     <p>
         <i class="bi bi-calendar2" [class.mx-2]="!isRTL()" [class.me-2]="isRTL()"></i> 
-        <span class="news-date">{{ getFormattedDate() }}</span>
+        <span class="news-date">{{ getNewsDate() | date:'longDate' }}</span>
     </p>
     <h5 class="card-title">{{ news.title }}</h5>
     <p class="subtitle">{{ news.subTitle }}</p>
