--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,8 @@
 <app-header 
+  *ngIf="!isAdminRoute"
   [activeSection]="activeSection">
 </app-header>
 
 <router-outlet></router-outlet>
 
-<app-footer></app-footer>
+<app-footer *ngIf="!isAdminRoute"></app-footer>
